exercise2_02/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app2-pong2-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: app2-service
          servicePort: 2345
      - path: /pingpong
        backend:
          serviceName: pong2-service
          servicePort: 3456
      - path: /api
        backend:
           serviceName: backend-service
           servicePort: 3457
